unpackaged/main/default/objects/CampaignMember/fields/Area_has_served_in__c.field-meta.xml
<CustomField>
    <fullName>Area_has_served_in__c</fullName>
    <label>What area(s) have you served in before?</label>
    <type>TextArea</type>
</CustomField>