unpackaged/main/default/objects/CampaignMember/fields/Can_help_Friday__c.field-meta.xml
<CustomField>
    <fullName>Can_help_Friday__c</fullName>
    <description>Can you help with transportation, luggage, and greeting Friday afternoon beginning at 2pm?</description>
    <label>Can you help on Friday starting at 2pm?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>