unpackaged/main/default/objects/CampaignMember/fields/Commit_to_check_email__c.field-meta.xml
<CustomField>
    <fullName>Commit_to_check_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can you commit to check email &amp; respond?</label>
    <type>Checkbox</type>
</CustomField>