unpackaged/main/default/objects/CampaignMember/fields/Commit_to_workday__c.field-meta.xml
<CustomField>
    <fullName>Commit_to_workday__c</fullName>
    <description>Can you commit to attending a workday before the OU weekend? (You will be notified of the date options)</description>
    <label>Can you commit to attending a workday?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>