unpackaged/main/default/objects/CampaignMember/fields/Date_of_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Arrival__c</fullName>
    <label>Date of Arrival</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thursday Morning</fullName>
            </value>
            <value>
                <fullName>Thursday Afternoon</fullName>
            </value>
            <value>
                <fullName>Thursday Evening</fullName>
            </value>
            <value>
                <fullName>Friday Morning</fullName>
            </value>
            <value>
                <fullName>Friday Afternoon</fullName>
            </value>
            <value>
                <fullName>Friday Evening</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>