unpackaged/main/default/objects/CampaignMember/fields/Days_can_serve__c.field-meta.xml
<CustomField>
    <fullName>Days_can_serve__c</fullName>
    <description>If volunteer cannot serve the entire weekend, this is the day(s) that they can serve.</description>
    <label>Select the days you are able to serve.</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>