unpackaged/main/default/objects/CampaignMember/fields/Group_want_to_coach__c.field-meta.xml
<CustomField>
    <fullName>Group_want_to_coach__c</fullName>
    <description>If interested in coaching, which group would you like to coach?</description>
    <label>Which group would you like to coach?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fathers</fullName>
            </value>
            <value>
                <fullName>Mothers</fullName>
            </value>
            <value>
                <fullName>Sons</fullName>
            </value>
            <value>
                <fullName>Daughters</fullName>
            </value>
            <value>
                <fullName>Husband &amp; Wife</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>