unpackaged/main/default/objects/CampaignMember/fields/Have_volunteer_tshirts__c.field-meta.xml
<CustomField>
    <fullName>Have_volunteer_tshirts__c</fullName>
    <label>Do you already have volunteer t-shirts?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>