unpackaged/main/default/objects/CampaignMember/fields/Jacket_size__c.field-meta.xml
<CustomField>
    <fullName>Jacket_size__c</fullName>
    <label>What is your jacket size?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>2XL</fullName>
            </value>
            <value>
                <fullName>3XL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>