unpackaged/main/default/objects/CampaignMember/fields/Need_weekend_lodging__c.field-meta.xml
<CustomField>
    <fullName>Need_weekend_lodging__c</fullName>
    <label>Will you need lodging for the weekend?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>