unpackaged/main/default/objects/CampaignMember/fields/Preferred_area_to_serve_in__c.field-meta.xml
<CustomField>
    <fullName>Preferred_area_to_serve_in__c</fullName>
    <description>What is the volunteer&#39;s first choice to serve in?</description>
    <label>What is your preferred area to serve in?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wherever Needed</fullName>
            </value>
            <value>
                <fullName>Activities</fullName>
            </value>
            <value>
                <fullName>Agape</fullName>
            </value>
            <value>
                <fullName>Event Clean Up</fullName>
            </value>
            <value>
                <fullName>Event Set-up &amp; Logistics (Everyone)</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Food Service</fullName>
            </value>
            <value>
                <fullName>Grounds &amp; Facilities</fullName>
            </value>
            <value>
                <fullName>Guest Registration &amp; Greeting</fullName>
            </value>
            <value>
                <fullName>Photography</fullName>
            </value>
            <value>
                <fullName>Prayer</fullName>
            </value>
            <value>
                <fullName>Tent Set-up</fullName>
            </value>
            <value>
                <fullName>Valet &amp; Transportation</fullName>
            </value>
            <value>
                <fullName>Volunteer Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>