unpackaged/main/default/objects/CampaignMember/fields/Serve_entire_weekend__c.field-meta.xml
<CustomField>
    <fullName>Serve_entire_weekend__c</fullName>
    <label>Can you serve the entire weekend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>