unpackaged/main/default/objects/CampaignMember/fields/Service_community__c.field-meta.xml
<CustomField>
    <fullName>Service_community__c</fullName>
    <description>Which service community would you like to serve in? Your service community leader will reach out to you to discuss options within your area in more detail.</description>
    <label>Service community you&#39;d like to serve in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spiritual Life</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Grounds</fullName>
            </value>
            <value>
                <fullName>Activities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>