unpackaged/main/default/objects/CampaignMember/fields/Volunteer_as_coach__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_as_coach__c</fullName>
    <label>Interested in volunteering as a coach?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>