unpackaged/main/default/objects/CampaignMember/fields/Volunteer_City__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_City__c</fullName>
    <description>Which city will the volunteer assist in?</description>
    <label>Volunteer City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JH Outback Atlanta</fullName>
            </value>
            <value>
                <fullName>JH Outback Auburn</fullName>
            </value>
            <value>
                <fullName>JH Outback Birmingham</fullName>
            </value>
            <value>
                <fullName>JH Outback Greensboro</fullName>
            </value>
            <value>
                <fullName>JH Outback Jackson</fullName>
            </value>
            <value>
                <fullName>JH Outback Nashville</fullName>
            </value>
            <value>
                <fullName>JH Outback Cincinnati</fullName>
            </value>
            <value>
                <fullName>JH Outback Huntsville</fullName>
            </value>
            <value>
                <fullName>JH Outback Mobile</fullName>
            </value>
            <value>
                <fullName>JH Outback Tuscaloosa</fullName>
            </value>
            <value>
                <fullName>JH Outback Houston</fullName>
            </value>
            <value>
                <fullName>JH Outback California</fullName>
            </value>
            <value>
                <fullName>JH Outback Palm Beach</fullName>
            </value>
            <value>
                <fullName>JH Outback University Palm Beach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>