unpackaged/main/default/objects/CampaignMember/fields/Volunteered_before__c.field-meta.xml
<CustomField>
    <fullName>Volunteered_before__c</fullName>
    <label>Have you volunteered with us before</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>