unpackaged/main/default/objects/CampaignMember/fields/When_did_you_volunteer__c.field-meta.xml
<CustomField>
    <fullName>When_did_you_volunteer__c</fullName>
    <label>When were you a volunteer?</label>
    <type>TextArea</type>
</CustomField>