unpackaged/main/default/objects/CampaignMember/fields/Where_volunteered__c.field-meta.xml
<CustomField>
    <fullName>Where_volunteered__c</fullName>
    <label>Where have you volunteered before?</label>
    <type>TextArea</type>
</CustomField>